U - Add meta tags with open graphs

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,41 @@
     <title>jerogassan</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- HTML Meta Tags -->
+    <title>Desarrollador Jerónimo Gascón</title>
+    <meta
+      name="description"
+      content="Portfolio de Jerónimo. Más de 5 años de experiencia como Ingeniero de Software."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://jerogassan.dev/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Desarrollador Jerónimo Gascón" />
+    <meta
+      property="og:description"
+      content="Portfolio de Jerónimo. Más de 5 años de experiencia como Ingeniero de Software."
+    />
+    <meta
+      property="og:image"
+      content="./assets/imgs/presentation_photo_jeronimo_gascon_sanchez.jpg"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="jerogassan.dev" />
+    <meta property="twitter:url" content="https://jerogassan.dev/" />
+    <meta name="twitter:title" content="Desarrollador Jerónimo Gascón" />
+    <meta
+      name="twitter:description"
+      content="Portfolio de Jerónimo. Más de 5 años de experiencia como Ingeniero de Software."
+    />
+    <meta
+      name="twitter:image"
+      content="./assets/imgs/presentation_photo_jeronimo_gascon_sanchez.jpg"
+    />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
